--- a/index.css
+++ b/index.css
@@ -47,7 +47,7 @@ header {
 
 .nav_bar a:hover {
     border-bottom: 5px solid #f54e77;
-    
+
 }
 
 .nav_bar a sup {
@@ -70,7 +70,7 @@ header {
     background-color: #f5f5f6;
     color: #282c3f;
     font-weight: 300;
-    border-radius: 4px 0 0 4px ;
+    border-radius: 4px 0 0 4px;
 }
 
 .search_input {
@@ -96,8 +96,9 @@ header {
 
 /*  css for main section */
 .banner_container {
-    margin: 40px 0 ;
+    margin: 40px 0;
 }
+
 .banner_image {
     width: 100%;
 }
@@ -110,4 +111,45 @@ header {
     margin: 50px 0 10px 30px;
     max-height: 5em;
     font-weight: 700;
+}
+
+.category_items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.sale_items {
+    width: 250px;
+}
+
+.footer_container {
+    padding: 30px 0 40px 0;
+    background-color: #fafbfc;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.footer_column h3 {
+    color: #282c3f;
+    font-size: 14px;
+    margin-bottom: 25px;
+}
+
+.footer_column {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer_column a {
+    color: #696b79;
+    font-size: 15px;
+    text-decoration: none;
+    padding-bottom: 5px;
+}
+
+.copyright {
+    color: #94969f;
+    text-align: end;
+    padding: 15px;
 }
